Refactored swagger.json & Added following routes: addUser,getUserById for User
