# back/controllers/Users.js
@@ -3,7 +3,7 @@
  */
 'use strict';
 
-var logger = require('log4js').getLogger('users'),
+var logger = require('log4js').getLogger('Users'),
     mongoose = require('mongoose'),
     userDB = require('../models/UserDB'),
     User = mongoose.model('User');
@@ -20,4 +20,24 @@ module.exports.getUsers = function getUsers (req, res, next) {
         res.setHeader('Content-Type', 'application/json');
         res.end(JSON.stringify(result || {}, null, 2));
     });
+};
+
+module.exports.addUser = function addUser (req, res, next) {
+    logger.info('Adding new user...');
+    // Code necessary to consume the Weather API and respond
+
+    res.json({"message":"not implemented yet"});
+
+    //@TODO implement the function
+};
+
+module.exports.getUserById = function getUserById (req, res, next) {
+    logger.info('BaseUrl:'+req.originalUrl);
+    logger.info('Path:'+req.path);
+    logger.info('Getting the user with id:'+ req.params[0]);
+    // Code necessary to consume the Weather API and respond
+
+    res.json({"message":"not implemented yet"});
+
+    //@TODO implement the function
 };
